# cit371-helicopter-commander

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.txt
Lib/: portaudio_static_x64.lib  rnnoise.lib
Source/: AudioRecording.cpp  AudioRecording.hpp  Main.cpp
src/: AudioRecording.cpp  AudioRecording.hpp  Main.cpp
